[package]
name = "better_brew"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Behnam Mohammadi"]
description = "🍻 Parallel Homebrew package manager that speeds up upgrades by fetching packages concurrently"
license = "MIT"
repository = "https://github.com/ibehnam/better_brew"
homepage = "https://github.com/ibehnam/better_brew"
keywords = ["homebrew", "cli", "package-manager", "parallel", "macos"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["target/", ".claude/", ".git/", ".gitignore"]

[[bin]]
name = "bbrew"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
